tests/netconvert/import/XML/errors/xml_false_nod/errors.netconvert
Error: Could not open nodes-file 'hokkaido.nod.xml'.
Error: No nodes loaded.
Quitting (on error).
